Bug 1210249 - don't mess with toplevel widget when client side decorations are enabled. r=karlt